--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="head">
+      <h1>Francis Muthoni</h1>
+      <p>Thika, Kenya</p>
+      <p>
+        <i></i>
+        francismuthoni254@gmail.com
+      </p>
+      <p>
+        <i></i>
+        <a href="linkedin.com/in/francismuthoni"
+          >linkedin.com/in/francismuthoni</a
+        >
+      </p>
+    </div>
+    <div class="summary">
+      <ol>
+        <li>A Software Engineering student at Kirinyaga University.</li>
+        <li>
+          A GADS2020(Google Africa Developers Scholarship) program student on
+          the Mobile Web Specialist track majoring on Progressive Web App.
+        </li>
+        <li>A Responsive Web Designer using Bootstrap4, SaaS, Less and etc</li>
+        <li>
+          A LinkedIn Software Developer Student in the 2020 program offer.
+        </li>
+        <li>
+          A skilled person who can work efficiently in HTML, CSS, JavaScript and
+          it's frameworks such as Angular and React, Python for Deep learning
+          and Machine Learning student
+        </li>
+      </ol>
+    </div>
+    <div class="education">
+      <h3>Education</h3>
+      <p>Kirinyaga University</p>
+      <p>Bachelor's degree, Computer Software Engineering</p>
+      <p>2019 - 2023</p>
+    </div>
+    <div class="certs">
+      <h3>Licenses & Certifications</h3>
+      <ol id="certs">
+        <li><b>Fundamental - SoloLearn</b></li>
+        <ul>
+          <li>#1014-17221150</li>
+        </ul>
+        <li><b>Responsive Web Design - freeCodeCamp</b></li>
+        <ul>
+          <li>fccb26a24b0-6bd4-4476-99fa-ed05ca3ff88e</li>
+        </ul>
+        <li><b>Building Websites with HTML - Pluralsight</b></li>
+        <ul>
+          <li>REP ID 4127</li>
+        </ul>
+        <li><b>PYTHON 3 - SoloLearn</b></li>
+        <ul>
+          <li>#1073-17221150</li>
+        </ul>
+        <li><b>Building Websites with Skeleton CSS - Pluralsight</b></li>
+        <ul>
+          <li>REP ID 4127</li>
+        </ul>
+        <li><b>Semantic HTML - Pluralsight</b></li>
+        <ul>
+          <li>REP ID 4127</li>
+        </ul>
+        <li><b>Building Layouts with the CSS Grid - Pluralsight</b></li>
+        <ul>
+          <li>REP ID 4127</li>
+        </ul>
+        <li><b>Introduction to Bootstrap - Pluralsight</b></li>
+        <ul>
+          <li>REP ID 4127</li>
+        </ul>
+        <li><b>Learning SQL Programming - LinkedIn</b></li>
+        <li><b>HTML Essential Training - LinkedIn</b></li>
+        <li><b>Learning Python - LinkedIn</b></li>
+        <li><b>CSS Essential Training - LinkedIn</b></li>
+        <li><b>JavaScript Essential Training (2017) - LinkedIn</b></li>
+      </ol>
+    </div>
+    <div class="skills">
+      <ul id="skills">
+        <li>Software Development</li>
+        <li>Motivational Speaking</li>
+        <li>Leadership skills</li>
+        <li>Programming</li>
+        <li>Python (Programming Language)</li>
+        <li>Microsoft Office</li>
+        <li>MySQL</li>
+        <li>HTML5</li>
+        <li>Cascading Style Sheets (CSS)</li>
+        <li>C (Programming Language)</li>
+      </ul>
+    </div>
+  </body>
+</html>
